5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1637_2443.log
== TEST (2019-04-09 11:49:20) 
-- CODE:
from math import *
r = float(input("raio:"))
x = float(input("altura:"))
o = int(input("opcao desejada:"))

if(o == 1):
	msg = ((pi * x ** 2) * (3r - x)) / 3
else:
	msg = ((4 * pi * r **2) / 2) -  (((pi * x ** 2) * (3r - x)) / 3)
	
t = round(msg, 4)

print(t)
-- ERROR:
File "XXXX", line 7
    msg = ((pi * x ** 2) * (3r - x)) / 3
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:33) 
-- CODE:
from math import *
r = float(input("raio:"))
x = float(input("altura:"))
o = int(input("opcao desejada:"))

if(o == 1):
	msg = ((pi * x ** 2) * (3 * r - x)) / 3
else:
	msg = ((4 * pi * r **2) / 2) -  (((pi * x ** 2) * (3r - x)) / 3)
	
t = round(msg, 4)

print(t)
-- ERROR:
File "XXXX", line 9
    msg = ((4 * pi * r **2) / 2) -  (((pi * x ** 2) * (3r - x)) / 3)
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:44) 
-- CODE:
from math import *
r = float(input("raio:"))
x = float(input("altura:"))
o = int(input("opcao desejada:"))

if(o == 1):
	msg = ((pi * x ** 2) * (3 * r - x)) / 3
else:
	msg = ((4 * pi * r **2) / 2) -  (((pi * x ** 2) * (3 * r - x)) / 3)
	
t = round(msg, 4)

print(t)
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:02) 
-- CODE:
from math import *
r = float(input("raio:"))
x = float(input("altura:"))
o = int(input("opcao desejada:"))

if(o == 1):
	msg = ((pi * x ** 2) * (3 * r - x)) / 3
else:
	msg = ((4 * pi * r ** 3) / 3) -  (((pi * x ** 2) * (3 * r - x)) / 3)
	
t = round(msg, 4)

print(t)
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:20) 
-- CODE:
from math import *
r = float(input("raio:"))
x = float(input("altura:"))
o = int(input("opcao desejada:"))

if(o == 1):
	msg = ((pi * x ** 2) * (3 * r - x)) / 3
else:
	msg = ((4 * pi * r ** 3) / 3) -  (((pi * x ** 2) * (3 * r - x)) / 3)
	
t = round(msg, 4)

print(t)
-- EXECUTION TIME:
0.235884
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
